--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,3 +12,62 @@ html{
     font-size: 62.5%;
 }
 /* End of Default Styles */
+
+/* Container */
+.container{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    overflow: hidden;
+}
+/* Header */
+header{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+/* Background */
+.backgrounds div{
+ position:absolute;
+}
+
+.bg-main{
+    width: 150%;
+    height: 150%;
+    background:linear-gradient(to left, transparent, #4400c5, #4400ab);
+    top: -95%;
+    left: -10%;
+    transform: rotateZ(-15deg)skewX(30deg);
+    border-radius: 0 0 0 10rem;
+    opacity: 0.9;
+    z-index: 1;
+}
+
+.bg-1{
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(transparent 60%, #ff26ac, #f724db);
+    top: -40%;
+    right: -10%;
+    transform: rotateZ(-15deg)skewX(30deg);
+    border-radius: 0 0 0 5rem;
+
+}
+.bg-2{
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(transparent 70%, #CA5995, #fe945a);
+    top: -60%;
+    right: 10%;
+    transform: rotateZ(-15deg)skewX(30deg);
+    border-radius: 0 0 0 5rem;
+    z-index: 2;
+    opacity: .4;
+    box-shadow: 7rem 4rem 6rem rgba(0, 0, 0, 0.9);
+
+}
+
+
+/* End of Backgrounds */
+/* End of Header */
+/* End of Container */
