--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,54 @@ header{
     position: relative;
 }
 
+/* Navigation */
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 12rem;
+    padding: 0 15rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* Logo */
+.logo{
+    display: flex;
+    flex-direction: column;
+
+}
+.logo span{
+    text-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
+}
+.logo span:nth-child(1){
+    font-family: "Mooli", cursive;
+    font-size: 3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color:#fff;
+}
+
+.logo span:nth-child(1) span{
+    display:inline-block;
+    font-size: 1.8rem;
+    transform: translateY(-0.8rem);
+}
+
+.logo span:nth-child(2){
+    display: inline-block;
+    font-family: "Croissant One", cursive;
+    font-size: 1.5rem;
+    color:#ddd;
+    letter-spacing: 0.1rem;
+    text-align: right;
+    transform: translate(2.2rem, -1rem);
+}
+/* End of Logo */
+/* End of Navigation */
+
 /* Banner */
 .banner{
     position: absolute;
