--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,12 +20,6 @@ html{
     background-color: #fff;
     overflow: hidden;
 }
-/* Header */
-header{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-}
 
 /* Navigation */
 .navbar{
@@ -73,7 +67,57 @@ header{
     transform: translate(2.2rem, -1rem);
 }
 /* End of Logo */
+
+/* Nav Itesm */
+.nav-items{
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.nav-items{
+    list-style: none;
+}
+
+.nav-link{
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: #fff;
+    letter-spacing: .1rem;
+    text-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.nav-btn{
+    width: 13rem;
+    height: 5rem;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4rem;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+    font-size: 2rem;
+    letter-spacing: .1rem;
+    color: #f88344;
+    text-transform:uppercase;
+    transition: transform 0.3s;
+}
+
+.nav-btn:hover{
+    transform: translateY(-0.2rem);
+}
+/* End of Nav Items */
 /* End of Navigation */
+
+/* Header */
+header{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+
 
 /* Banner */
 .banner{
